Refactor 1.0: Cards, Exceptions, Challenger, Enums, Corner, Events.